--- a/index.html
+++ b/index.html
@@ -1,1 +1,102 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>VH Dream Center</title>
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+</head>
+<body>
+
+  <header>
+    <img src="images/logo.png" alt="VHDC Logo" class="logo" />
+    <h1>VH Dream Center</h1>
+    <p class="tagline">Loving People Where They Are Without Leaving Them Where They're At</p>
+  </header>
+
+  <nav class="nav">
+    <a href="#services">What We Do</a>
+    <a href="#meetings">Meetings</a>
+    <a href="#impact">Impact</a>
+    <a href="#gallery">Gallery</a>
+    <a href="#contact">Contact</a>
+  </nav>
+
+  <section id="services">
+    <h2>What We Do</h2>
+    <div class="grid">
+      <div class="card">
+        <img src="images/recovery.jpg" alt="Recovery Support" />
+        <h3>Recovery Support</h3>
+        <p>Support groups, NA meetings, peer encouragement, and men’s sober living housing.</p>
+      </div>
+      <div class="card">
+        <img src="images/basic-needs.jpg" alt="Basic Needs" />
+        <h3>Basic Needs</h3>
+        <p>Grab & Go lunches, warming shelter, showers, laundry, clothing, and hygiene essentials.</p>
+      </div>
+      <div class="card">
+        <img src="images/community.jpg" alt="Community Connection" />
+        <h3>Community Connection</h3>
+        <p>Linking individuals to wrap-around services, housing, healthcare, jobs, and more.</p>
+      </div>
+      <div class="card">
+        <img src="images/reentry.jpg" alt="Reentry Support" />
+        <h3>Reentry Support</h3>
+        <p>Programs for people exiting incarceration, plus inmate/family reunification support.</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="meetings">
+    <h2>Weekly Meetings</h2>
+    <div class="grid">
+      <div class="card"><strong>Monday:</strong> Iron Sharpens Iron – 6PM</div>
+      <div class="card"><strong>Tuesday:</strong> Last Minute Meeting – 10AM</div>
+      <div class="card"><strong>Wednesday:</strong> The ALL IN – 6:30PM</div>
+      <div class="card"><strong>Thursday:</strong> Freedom Fighters – 10AM<br/>Local Honey – 6:30PM</div>
+      <div class="card"><strong>Friday:</strong> Recover Out Loud – 6PM</div>
+    </div>
+  </section>
+
+  <section id="impact">
+    <h2>Community Impact</h2>
+    <div class="grid">
+      <div class="card">
+        <img src="images/narcan-box.jpg" alt="Narcan Access" />
+        <h3>Narcan Access</h3>
+        <p>Free naloxone boxes available for emergency overdose response.</p>
+      </div>
+      <div class="card">
+        <img src="images/food-shelf.jpg" alt="Food Outreach" />
+        <h3>Food Outreach</h3>
+        <p>Outdoor food cabinets stocked with meals and pantry staples for anyone in need.</p>
+      </div>
+      <div class="card">
+        <img src="images/from-death-to-life.jpg" alt="From Death to Life" />
+        <h3>From Death to Life</h3>
+        <p>Real recovery stories and transformational journeys supported by our programs.</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="gallery">
+    <h2>Image Gallery</h2>
+    <div class="gallery">
+      <img src="images/warming-shelter.jpg" alt="Warming Shelter" />
+      <img src="images/targeted-services.jpg" alt="Services Orientation" />
+      <img src="images/community-photo.jpg" alt="Community" />
+      <img src="images/meal.jpg" alt="Hot Meal" />
+    </div>
+  </section>
+
+  <footer id="contact">
+    <p>Visit us: 201 S. Court St, Scottsville, KY 42164</p>
+    <p>Connect on <a href="https://www.facebook.com/vhdreamcenter" target="_blank">Facebook</a></p>
+    <p>&copy; 2024 VH Dream Center</p>
+  </footer>
+
+</body>
+</html>
 
