--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <header>
-    <img src="images/logo.png" alt="VHDC Logo" class="logo" />
+    <img src="images/vhdc-logo.png" alt="VHDC Logo" class="logo" />
     <h1>VH Dream Center</h1>
     <p class="tagline">Loving People Where They Are Without Leaving Them Where They're At</p>
   </header>
@@ -27,22 +27,22 @@
     <h2>What We Do</h2>
     <div class="grid">
       <div class="card">
-        <img src="images/recovery.jpg" alt="Recovery Support" />
+        <img src="images/narcan-box.jpg" alt="Narcan Box" />
         <h3>Recovery Support</h3>
         <p>Support groups, NA meetings, peer encouragement, and men’s sober living housing.</p>
       </div>
       <div class="card">
-        <img src="images/basic-needs.jpg" alt="Basic Needs" />
+        <img src="images/food-shelf.jpg" alt="Food Shelf" />
         <h3>Basic Needs</h3>
         <p>Grab & Go lunches, warming shelter, showers, laundry, clothing, and hygiene essentials.</p>
       </div>
       <div class="card">
-        <img src="images/community.jpg" alt="Community Connection" />
+        <img src="images/community-partner.jpg" alt="Community Partner Spotlight" />
         <h3>Community Connection</h3>
         <p>Linking individuals to wrap-around services, housing, healthcare, jobs, and more.</p>
       </div>
       <div class="card">
-        <img src="images/reentry.jpg" alt="Reentry Support" />
+        <img src="images/from-death-to-life.jpg" alt="Before and After" />
         <h3>Reentry Support</h3>
         <p>Programs for people exiting incarceration, plus inmate/family reunification support.</p>
       </div>
@@ -51,43 +51,38 @@
 
   <section id="meetings">
     <h2>Weekly Meetings</h2>
-    <div class="grid">
-      <div class="card"><strong>Monday:</strong> Iron Sharpens Iron – 6PM</div>
-      <div class="card"><strong>Tuesday:</strong> Last Minute Meeting – 10AM</div>
-      <div class="card"><strong>Wednesday:</strong> The ALL IN – 6:30PM</div>
-      <div class="card"><strong>Thursday:</strong> Freedom Fighters – 10AM<br/>Local Honey – 6:30PM</div>
-      <div class="card"><strong>Friday:</strong> Recover Out Loud – 6PM</div>
-    </div>
+    <img src="images/weekly-meetings.jpg" alt="Weekly Meeting Schedule" class="full-width" />
   </section>
 
   <section id="impact">
     <h2>Community Impact</h2>
     <div class="grid">
       <div class="card">
-        <img src="images/narcan-box.jpg" alt="Narcan Access" />
+        <img src="images/narcan-shelf.jpg" alt="Narcan Access" />
         <h3>Narcan Access</h3>
         <p>Free naloxone boxes available for emergency overdose response.</p>
       </div>
       <div class="card">
-        <img src="images/food-shelf.jpg" alt="Food Outreach" />
-        <h3>Food Outreach</h3>
-        <p>Outdoor food cabinets stocked with meals and pantry staples for anyone in need.</p>
+        <img src="images/warming-shelter.jpg" alt="Emergency Shelter Flyer" />
+        <h3>Emergency Shelter</h3>
+        <p>Volunteer-led shelter opens when temperatures fall below 32° overnight.</p>
       </div>
       <div class="card">
-        <img src="images/from-death-to-life.jpg" alt="From Death to Life" />
-        <h3>From Death to Life</h3>
-        <p>Real recovery stories and transformational journeys supported by our programs.</p>
+        <img src="images/na-friday.jpg" alt="NA Meeting Flyer" />
+        <h3>New NA Meeting</h3>
+        <p>“Recover Out Loud” - Every Friday at 6PM - All are welcome.</p>
       </div>
     </div>
   </section>
 
   <section id="gallery">
-    <h2>Image Gallery</h2>
+    <h2>Gallery</h2>
     <div class="gallery">
-      <img src="images/warming-shelter.jpg" alt="Warming Shelter" />
-      <img src="images/targeted-services.jpg" alt="Services Orientation" />
-      <img src="images/community-photo.jpg" alt="Community" />
-      <img src="images/meal.jpg" alt="Hot Meal" />
+      <img src="images/certificate.jpg" alt="Certificate Celebration" />
+      <img src="images/community-resource.jpg" alt="Community Resource Event" />
+      <img src="images/team-core-coin.jpg" alt="Coin Recognition" />
+      <img src="images/team-shirt.jpg" alt="Sponsor Shoutout" />
+      <img src="images/overnight-shelter.jpg" alt="Overnight Shelter Info" />
     </div>
   </section>
 
@@ -99,4 +94,3 @@
 
 </body>
 </html>
-
